--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/clix-activity-styles.css
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/css/clix-activity-styles.css
@@ -1,21 +1,19 @@
 
-/* line 5, ../sass/styles.scss */
-body {
+#scstyle body{
+
   font-family: 'Rubik', sans-serif;
   font-weight: normal;
   font-size: 1em;
 }
 
-/* line 12, ../sass/styles.scss */
-h1, h2, h3, h4, h5, h6 {
+#scstyle h1, h2, h3, h4,  h5,  h6 {
   font-family: 'Rubik-Light', sans-serif;
   font-weight: normal;
-  color: #4a4a4a;
+  color: #4a4a4a !important; 
   color: var(--greyish-brown);
 }
 
-/* line 19, ../sass/styles.scss */
-:root {
+#scstyle :root {
   --primary-blue: #2e3f51;
   --secondary-blue: #ACD4FA;
   --tertiary-blue: #719dc7;
@@ -34,58 +32,53 @@ h1, h2, h3, h4, h5, h6 {
   --white-four: #f7f6f6;
 }
 
+
 /* Text styles */
-/* line 41, ../sass/styles.scss */
-h1 {
+
+#scstyle h1 {
   margin-top: 3px;
   font-family: 'Rubik-Medium', sans-serif;
   font-size: 2.5rem;
   letter-spacing: -1.2px;
-  color: #a61680;
+  color: #a61680 !important;
   color: var(--berry);
 }
 
-/* line 50, ../sass/styles.scss */
-h2 {
+#scstyle h2 {
   margin: 25px 0 5px;
   font-size: 1.65rem;
   line-height: 1.1;
   letter-spacing: -0.1px;
 }
 
-/* line 57, ../sass/styles.scss */
-h3 {
+#scstyle h3 {
   margin: 20px 0 5px;
   font-size: 1.5rem;
   line-height: 1.3;
   letter-spacing: -0.2px;
 }
 
-/* line 64, ../sass/styles.scss */
-h4 {
+#scstyle h4 {
   margin: 18px 0 5px;
   font-size: 1.25rem;
   letter-spacing: -0.6px;
 }
 
-/* line 70, ../sass/styles.scss */
-h5 {
+#scstyle h5 {
   margin: 18px 0 5px;
   font-family: 'Rubik-Medium', sans-serif;
   font-size: 1.1rem;
   letter-spacing: -0.5px;
 }
 
-/* line 77, ../sass/styles.scss */
-h6 {
+#scstyle h6 {
   margin: 18px 0 5px;
   font-family: 'Rubik-Medium', sans-serif;
   font-size: 1rem;
   letter-spacing: -0.4px;
 }
 
-/* line 84, ../sass/styles.scss */
-p {
+#scstyle p {
   margin: 5px 0 10px;
   font-family: 'Rubik-Regular', sans-serif;
   font-size: .875em;
@@ -93,8 +86,7 @@ p {
   color: #000000;
 }
 
-/* line 92, ../sass/styles.scss */
-li {
+#scstyle li {
   margin: .5rem 1.15rem 0;
   padding-left: 3px;
   font-family: 'Rubik-Regular', sans-serif;
@@ -103,59 +95,51 @@ li {
   color: #000000;
 }
 
-/* line 101, ../sass/styles.scss */
-ol > li {
+#scstyle ol > li {
   margin-left: 1.03rem;
   padding-left: 5px;
+
 }
 
-/* line 107, ../sass/styles.scss */
-li:last-child {
+#scstyle li:last-child {
   margin-bottom: 1.5rem;
 }
 
-/* line 112, ../sass/styles.scss */
-strong {
+
+#scstyle strong {
   font-family: 'Rubik-Bold', sans-serif;
   color: #000000;
 }
 
-/* line 117, ../sass/styles.scss */
-em {
+#scstyle em {
   font-family: 'Rubik-Italic', sans-serif;
   color: #000000;
 }
 
-/* line 122, ../sass/styles.scss */
-a {
+#scstyle a {
   color: #573d8f;
   text-decoration: none;
 }
 
-/* line 127, ../sass/styles.scss */
-a:link {
+#scstyle a:link {
   color: #573d8f;
 }
 
-/* line 131, ../sass/styles.scss */
-a:visited {
+#scstyle a:visited {
   color: #5387c6;
 }
 
-/* line 135, ../sass/styles.scss */
-a:active {
+#scstyle a:active {
   color: #e5007e;
-  border-bottom: 0.2em solid #e5007e;
+  border-bottom: .2em solid rgba(229, 0 ,126, 1);
 }
 
-/* line 140, ../sass/styles.scss */
-a:hover {
+#scstyle a:hover {
   color: #a61680;
-  border-bottom: 0.2em solid #a61680;
+  border-bottom: .2em solid rgba(166, 22, 128, 1);
 }
 
-/* line 145, ../sass/styles.scss */
-small {
+#scstyle small {
   font-family: 'Rubik-Regular',sans-serif;
   font-size: .75em;
   letter-spacing: 1.1px;
@@ -164,36 +148,31 @@ small {
   color: var(--warm-grey);
 }
 
-/* line 154, ../sass/styles.scss */
-blockquote {
+#scstyle blockquote{
   margin: 1.5em auto;
   padding: .65em;
   font-family: 'Rubik-Light',sans-serif;
   font-size: 1.25rem;
   line-height: 1.3;
   letter-spacing: -0.2px;
-  color: #4a4a4a;
+  color: #4a4a4a !important;
   color: var(--greyish-brown);
-  background-color: #f7f6f6;
+  background-color: #f7f6f6 !important;
   background-color: var(--white-four);
-  border-left: 4px solid #573d8f;
+  border-left: 4px solid #573d8f !important;
   border-left: 4px solid var(--blueberry);
 }
-
-/* line 169, ../sass/styles.scss */
-.inline-button {
+#scstyle .inline-button {
   display: inline-block;
   padding: 0 .15rem;
   height: 18px;
 }
 
-/* line 175, ../sass/styles.scss */
-ul.callout {
+#scstyle ul.callout {
   margin: 25px auto;
 }
 
-/* line 179, ../sass/styles.scss */
-ul.callout li {
+#scstyle ul.callout li {
   font-family: 'Rubik-Light',sans-serif;
   font-size: 1.1em;
   line-height: 1.2;
@@ -202,40 +181,35 @@ ul.callout li {
   color: var(--greyish-brown);
 }
 
-/* line 189, ../sass/styles.scss */
-header, footer {
+
+#scstyle header, footer {
   margin: 50px auto 0px;
 }
 
-/* line 193, ../sass/styles.scss */
-main {
+#scstyle main {
   margin: 0px auto;
 }
 
-/* line 197, ../sass/styles.scss */
-article {
+#scstyle article {
   padding: 20px auto 40px;
 }
 
-/* line 201, ../sass/styles.scss */
-hr {
+#scstyle hr {
   margin: .5em 0;
 }
 
-/* line 205, ../sass/styles.scss */
-section {
+#scstyle section{
   margin-left: auto;
 }
 
-/* line 209, ../sass/styles.scss */
-audio {
+#scstyle audio {
   margin: 10px auto;
   width: 100%;
 }
 
-/* line 215, ../sass/styles.scss */
-aside:after {
-  content: '';
+
+#scstyle aside:after {
+ content: '';
   clear: both;
   display: block;
   visibility: hidden;
@@ -243,39 +217,35 @@ aside:after {
 }
 
 /* Images */
-/* line 225, ../sass/styles.scss */
-.photo-grid {
+
+#scstyle .photo-grid {
   margin: 1em auto;
   max-width: 1106px;
   text-align: center;
   cursor: pointer;
 }
 
-/* line 232, ../sass/styles.scss */
-.photo-grid li {
+#scstyle .photo-grid li {
   border: 5px solid white;
   display: inline-block;
   margin: 1em;
   width: 289px;
 }
 
-/* line 239, ../sass/styles.scss */
-.photo-grid img {
+#scstyle .photo-grid img {
   display: block;
   height: auto;
   max-width: 100%;
 }
 
-/* line 245, ../sass/styles.scss */
-.photo-grid figure {
+#scstyle .photo-grid figure {
   height: 163px;
   overflow: hidden;
   position: relative;
   width: 289px;
 }
 
-/* line 252, ../sass/styles.scss */
-.photo-grid figcaption {
+#scstyle .photo-grid figcaption {
   background-color: rgba(112, 0, 82, 0.8);
   color: white;
   display: table;
@@ -294,13 +264,11 @@ aside:after {
   z-index: 100;
 }
 
-/* line 271, ../sass/styles.scss */
-.photo-grid li:hover figcaption {
+#scstyle .photo-grid li:hover figcaption {
   opacity: 1;
 }
 
-/* line 275, ../sass/styles.scss */
-.photo-grid figcaption p {
+#scstyle .photo-grid figcaption p {
   display: table-cell;
   font-size: 1.5em;
   position: relative;
@@ -312,15 +280,13 @@ aside:after {
   vertical-align: middle;
 }
 
-/* line 287, ../sass/styles.scss */
-.photo-grid li:hover figcaption p {
+#scstyle .photo-grid li:hover figcaption p {
   -moz-transform: translateY(40px);
   -webkit-transform: translateY(40px);
   transform: translateY(40px);
 }
 
-/* line 293, ../sass/styles.scss */
-.photo-grid img {
+#scstyle .photo-grid img {
   display: block;
   height: auto;
   -webkit-transition: all 300ms;
@@ -329,50 +295,45 @@ aside:after {
   max-width: 100%;
 }
 
-/* line 302, ../sass/styles.scss */
-.photo-grid li:hover img {
+#scstyle .photo-grid li:hover img {
   -webkit-transform: scale(1.4);
   -moz-transform: scale(1.4);
   transform: scale(1.4);
 }
 
-/* line 308, ../sass/styles.scss */
-img {
-  max-width: 100%;
-  /*box-sizing: border-box;*/
+#scstyle img {
+    max-width: 100%;
+    /*box-sizing: border-box;*/
 }
 
-/* line 313, ../sass/styles.scss */
-img.photo-01up {
+#scstyle img.photo-01up {
   margin-top: 10px;
   margin-left: 25px;
   width: 100%;
   display: block;
   border: 12px solid #fff;
-  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.5);
+  box-shadow: 0 0 5px 0 rgba(0,0,0,0.5);
 }
 
-/* line 322, ../sass/styles.scss */
-img.photo-02up {
+#scstyle img.photo-02up {
   width: 100%;
-  /*  border: 6px solid #fff;*/
-  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.5);
+/*  border: 6px solid #fff;*/
+  box-shadow: 0 0 5px 0 rgba(0,0,0,0.5);
 }
 
-/* line 328, ../sass/styles.scss */
-img.photo-03up {
+#scstyle img.photo-03up {
   width: 100%;
-  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.5);
+  box-shadow: 0 0 5px 0 rgba(0,0,0,0.5);
 }
 
-/* line 333, ../sass/styles.scss */
-figure.zoom-fig-md:hover, figure.zoom-fig-sm:hover {
+#scstyle figure.zoom-fig-md:hover, figure.zoom-fig-sm:hover {
   cursor: pointer;
 }
 
+
 /*Art boxes */
 /* line 338, ../sass/styles.scss */
-.art-box {
+#scstyle .art-box {
   height: 170px;
   margin: 0;
   background-color: #ffffff;
@@ -380,7 +341,7 @@ figure.zoom-fig-md:hover, figure.zoom-fig-sm:hover {
 }
 
 /* line 345, ../sass/styles.scss */
-a.answer-this {
+#scstyle a.answer-this {
   position: absolute;
   top: 0;
   right: 0;
@@ -399,16 +360,17 @@ a.answer-this {
   text-transform: uppercase;
 }
 
-/* line 365, ../sass/styles.scss */
-figure {
+
+
+
+#scstyle figure {
   margin: 0;
   position: relative;
   overflow: hidden;
   text-align: center;
 }
 
-/* line 372, ../sass/styles.scss */
-figure img {
+#scstyle figure img {
   max-width: 100%;
   display: block;
   position: relative;
@@ -416,13 +378,13 @@ figure img {
   transition: opacity 1s, transform .4s;
 }
 
-/* line 380, ../sass/styles.scss */
-figcaption {
+#scstyle figcaption {
   position: absolute;
   bottom: 0;
   left: 0;
+
   display: inline-block;
-  background: #e6007e;
+  background: hsla(327,100%, 45%, 1);
   color: #fff;
   height: 6px;
   width: 100%;
@@ -431,8 +393,7 @@ figcaption {
   transition: transform 0.4s, opacity 0.3s 0.3s;
 }
 
-/* line 395, ../sass/styles.scss */
-figcaption p {
+#scstyle figcaption p {
   display: inline-block;
   position: absolute;
   bottom: 0px;
@@ -440,7 +401,7 @@ figcaption p {
   width: 100%;
   margin: 18px 0 5px;
   padding: 7px;
-  background: #b30062;
+  background: hsla(327,100%, 35%, 1);
   color: #fff;
   font-family: open_sansregular;
   font-size: 1.1rem;
@@ -448,139 +409,171 @@ figcaption p {
   text-align: center;
 }
 
-/* line 411, ../sass/styles.scss */
-figure:hover img {
+#scstyle figure:hover img {
   opacity: 1;
-  transform: scale3d(1.1, 1.1, 1);
+  transform: scale3d(1.1,1.1,1);
 }
 
-/* line 418, ../sass/styles.scss */
-figure:hover figcaption {
+
+
+#scstyle figure:hover figcaption {
   opacity: 1;
   transform: translateY(0);
   transition: transform 0.4s, opacity 0.1s;
 }
 
+
+
 /*MODAL*/
-/* line 428, ../sass/styles.scss */
-::backdrop {
+
+#scstyle ::backdrop {
   background-color: rgba(112, 0, 82, 0.8);
 }
 
-/* line 432, ../sass/styles.scss */
-dialog {
+#scstyle dialog {
   top: 5%;
   margin: 100px auto;
   border: none;
   border-radius: .3em;
+
 }
 
-/*modal define */
-/* line 446, ../sass/styles.scss */
-.modal {
-  display: none;
-  /* Hidden by default */
-  position: fixed;
-  /* Stay in place */
-  z-index: 1;
-  /* Sit on top */
-  padding-top: 30px;
-  /* Location of the box */
-  left: 0;
+#scstyle .modal-photo {
+  max-width: 100%;
+}
+
+#scstyle #zoom01 button {
+  margin: 10px 0;
+  padding: 10px;
+  background: radial-gradient(hsla(259, 40%, 40%, 1), hsla(259, 40%,30%, 1));
+  border: none;
+  border-radius: 5px;
+  color: #fff;
+  cursor: pointer;
+  font-size: .75rem;
+  text-transform: uppercase;
+}
+
+
+#scstyle #zoom01 button:hover {
+  background-color: #666;
+  background: radial-gradient(hsla(259, 40%, 30%, 1), hsla(259, 40%,20%, 1));
+}
+
+#scstyle #zoom01 button:active {
+  background: radial-gradient(#f37f2f, #f54b32);
+}
+
+#scstyle #zoom01 button.close-me {
+  position: absolute;
   top: 0;
-  width: 100%;
-  /* Full width */
-  height: 100%;
-  /* Full height */
-  overflow: fixed;
-  /* Enable scroll if needed */
-  /* Fallback color */
-  background-color: rgba(112, 0, 82, 0.65);
-  /* Black w/ opacity */
+  right: 10px;
+  height: 50px;
+  width: 50px;
+  font-size: 2em;
+  background: none;
+}
+
+#scstyle .zoom-label {
+  margin-bottom: 10px;
+}
+
+#scstyle .close-x {
+  font-size: 2em;
+  margin-bottom: 30px;
+  width: 20px;
+  height: 20px;
+}
+
+
+/*modal define */
+
+
+#scstyle .modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 30px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: fixed; /* Enable scroll if needed */
+     /* Fallback color */
+    background-color: rgba(112, 0, 82, 0.65); /* Black w/ opacity */
 }
 
 /* Modal Content (image) */
-/* line 461, ../sass/styles.scss */
-.modal-content {
-  margin: auto;
-  display: block;
-  width: 60%;
-  padding-top: 10px;
+#scstyle .modal-content {
+    margin: auto;
+    display: block;
+    width: 60%;
+    padding-top: 10px;
+    
 }
 
 /* Caption of Modal Image */
-/* line 470, ../sass/styles.scss */
-#caption {
-  margin: auto;
-  display: block;
-  width: 80%;
-  max-width: 700px;
-  text-align: center;
-  color: #ccc;
-  padding: 10px 0;
-  height: 150px;
+#scstyle #caption {
+    margin: auto;
+    display: block;
+    width: 80%;
+    max-width: 700px;
+    text-align: center;
+    color: #ccc;
+    padding: 10px 0;
+    height: 150px;
 }
 
 /* Add Animation */
-/* line 482, ../sass/styles.scss */
-.modal-content, #caption {
-  -webkit-animation-name: zoom;
-  -webkit-animation-duration: 0.6s;
-  animation-name: zoom;
-  animation-duration: 0.6s;
+#scstyle .modal-content, #caption {    
+    -webkit-animation-name: zoom;
+    -webkit-animation-duration: 0.6s;
+    animation-name: zoom;
+    animation-duration: 0.6s;
 }
 
-@-webkit-keyframes zoom {
-  from {
-    -webkit-transform: scale(0);
-  }
-  to {
-    -webkit-transform: scale(1);
-  }
+#scstyle @-webkit-keyframes zoom {
+    from {-webkit-transform:scale(0)} 
+    to {-webkit-transform:scale(1)}
 }
-@keyframes zoom {
-  from {
-    transform: scale(0);
-  }
-  to {
-    transform: scale(1);
-  }
+
+#scstyle @keyframes zoom {
+    from {transform:scale(0)} 
+    to {transform:scale(1)}
 }
+
 /* The Close Button */
-/* line 500, ../sass/styles.scss */
-.close {
-  position: absolute;
-  top: 15px;
-  right: 35px;
-  color: #f1f1f1;
-  font-size: 40px;
-  font-weight: bold;
-  transition: 0.3s;
+#scstyle .close {
+    position: absolute;
+    top: 15px;
+    right: 35px;
+    color: #f1f1f1;
+    font-size: 40px;
+    font-weight: bold;
+    transition: 0.3s;
 }
 
-/* line 510, ../sass/styles.scss */
-.close:hover,
+#scstyle .close:hover,
 .close:focus {
-  color: #bbb;
-  text-decoration: none;
-  cursor: pointer;
+    color: #bbb;
+    text-decoration: none;
+    cursor: pointer;
 }
 
 /* 100% Image Width on Smaller Screens */
-@media only screen and (max-width: 700px) {
-  /* line 519, ../sass/styles.scss */
-  .modal-content {
-    width: 100%;
-  }
+#scstyle @media only screen and (max-width: 700px){
+    .modal-content {
+        width: 100%;
+    }
 }
-/* line 524, ../sass/styles.scss */
-.toggle-me {
+
+#scstyle .toggle-me {
   display: block;
   width: 155px;
   height: 30px;
   margin: 0;
   padding: 9px 16px 2px;
-  background: radial-gradient(#573d8f, #412e6b);
+  background: radial-gradient(hsla(259, 40%, 40%, 1), hsla(259, 40%,30%, 1));
   border-radius: 0 0 5px 5px;
   color: #fff;
   cursor: pointer;
@@ -588,19 +581,16 @@ dialog {
   text-transform: uppercase;
 }
 
-/* line 538, ../sass/styles.scss */
-.toggle-me:hover {
+#scstyle .toggle-me:hover {
   background-color: #666;
-  background: radial-gradient(#412e6b, #2c1f47);
+  background: radial-gradient(hsla(259, 40%, 30%, 1), hsla(259, 40%,20%, 1));
 }
 
-/* line 543, ../sass/styles.scss */
-.toggle-me:active {
+#scstyle .toggle-me:active {
   background: radial-gradient(#f37f2f, #f54b32);
 }
 
-/* line 547, ../sass/styles.scss */
-#toggler,
+#scstyle #toggler,
 #toggler01,
 #toggler02,
 #toggler03,
@@ -613,8 +603,7 @@ dialog {
   display: none;
 }
 
-/* line 560, ../sass/styles.scss */
-#toggler ~ .transcript,
+#scstyle #toggler ~ .transcript,
 #toggler01 ~ .transcript,
 #toggler02 ~ .transcript,
 #toggler03 ~ .transcript,
@@ -623,7 +612,7 @@ dialog {
 #toggler06 ~ .transcript,
 #toggler07 ~ .transcript,
 #toggler08 ~ .transcript,
-#toggler09 ~ .transcript {
+#toggler09 ~ .transcript  {
   height: 0;
   padding: 0 0 10px !important;
   border-bottom: 2px solid #ddd;
@@ -632,8 +621,7 @@ dialog {
   transition: all 1s ease-in-out;
 }
 
-/* line 578, ../sass/styles.scss */
-#toggler:checked ~ .transcript,
+#scstyle #toggler:checked ~ .transcript,
 #toggler01:checked ~ .transcript,
 #toggler02:checked ~ .transcript,
 #toggler03:checked ~ .transcript,
@@ -642,18 +630,16 @@ dialog {
 #toggler06:checked ~ .transcript,
 #toggler07:checked ~ .transcript,
 #toggler08:checked ~ .transcript,
-#toggler09:checked ~ .transcript {
+#toggler09:checked ~ .transcript  {
   height: 100px !important;
   opacity: 1;
 }
 
-/* line 592, ../sass/styles.scss */
-.trans-form {
+#scstyle .trans-form {
   position: relative;
 }
 
-/* line 596, ../sass/styles.scss */
-.arrow-toggle {
+#scstyle .arrow-toggle {
   position: absolute;
   top: 10px;
   left: 132px;
@@ -661,8 +647,7 @@ dialog {
   transition: transform 1s;
 }
 
-/* line 604, ../sass/styles.scss */
-#toggler:checked ~ .arrow-toggle,
+#scstyle #toggler:checked ~ .arrow-toggle,
 #toggler01:checked ~ .arrow-toggle,
 #toggler02:checked ~ .arrow-toggle,
 #toggler03:checked ~ .arrow-toggle,
@@ -675,23 +660,20 @@ dialog {
   transform: rotate(90deg);
 }
 
-/* line 617, ../sass/styles.scss */
-.img_container {
-  /*float: left;*/
-  font-size: 9pt;
-  text-align: center;
-  width: 90%;
-  margin-right: 1%;
-  margin-bottom: 0.5em;
+#scstyle .img_container{
+	/*float: left;*/
+	font-size: 9pt;
+	text-align: center;
+	width: 90%;
+	margin-right: 1%;
+	margin-bottom: 0.5em;
 }
 
-/* line 626, ../sass/styles.scss */
-.vid {
-  margin-left: 0.25em;
+#scstyle .vid{
+	margin-left: 0.25em;
 }
 
-/* line 630, ../sass/styles.scss */
-btn, .btn {
+#scstyle bttn, .bttn {
   border-style: solid;
   border-width: 0px;
   cursor: pointer;
@@ -713,26 +695,18 @@ btn, .btn {
   background-color: #412e6b;
   border-color: #412e6b;
   color: white;
-  transition: background-color 300ms ease-out;
-}
+  transition: background-color 300ms ease-out; }
 
-/* line 654, ../sass/styles.scss */
-btn.tiny, .btn.tiny {
-  padding-top: 0.625rem;
-  padding-right: 1.25rem;
-  padding-bottom: 0.6875rem;
-  padding-left: 1.25rem;
-  font-size: 0.6875rem;
-  margin-left: 25px;
-}
+#scstyle bttn.tiny, .bttn.tiny {
+    padding-top: 0.625rem;
+    padding-right: 1.25rem;
+    padding-bottom: 0.6875rem;
+    padding-left: 1.25rem;
+    font-size: 0.6875rem;
+    margin-left: 25px; }
 
-/* line 662, ../sass/styles.scss */
-btn.radius, .btn.radius {
-  border-radius: 3px;
-}
-
-/* line 664, ../sass/styles.scss */
-btn:hover, btn:focus, .btn:hover, .btn:focus {
-  background-color: radial-gradient(#412e6b, #2c1f47);
-  color: white;
-}
+#scstyle bttn.radius, .bttn.radius {
+    border-radius: 3px; }
+#scstyle bttn:hover, bttn:focus, .bttn:hover, .bttn:focus {
+    background-color: radial-gradient(#412e6b,#2c1f47);
+    color: white; }
